// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Routes GET /participant/:participantId should fail when the participant does not exist 1`] = `
{
  "error": "Unknown participantId",
  "type": "AppError",
}
`;

exports[`API Routes GET /participant/:participantId should fail when the participant is invalid 1`] = `
{
  "error": "participantId must be a valid UUID",
  "type": "ValidationError",
}
`;

exports[`API Routes GET /participant/:participantId should retrieve public information about a participant 1`] = `
{
  "participantId": "overwritten",
  "publicInfo": {
    "participantHasDoneSomething": true,
  },
}
`;

exports[`API Routes GET /session/:sessionId should fail when the session does not exist 1`] = `
{
  "error": "Unknown sessionId",
  "type": "AppError",
}
`;

exports[`API Routes GET /session/:sessionId should fail when the sessionId is invalid 1`] = `
{
  "error": "sessionId must be a valid UUID",
  "type": "ValidationError",
}
`;

exports[`API Routes GET /session/:sessionId should retrieve public information about a session 1`] = `
{
  "publicInfo": {
    "dolor": "sit",
  },
  "sessionId": "overwritten",
}
`;

exports[`API Routes GET /study/:studyId/count/:countType should fail when the countType does not exist 1`] = `
{
  "error": "Unknown countType: non-existent-type",
  "type": "AppError",
}
`;

exports[`API Routes GET /study/:studyId/count/:countType should fail when the study does not exist 1`] = `
{
  "error": "Unknown studyId",
  "type": "AppError",
}
`;

exports[`API Routes GET /study/:studyId/data/:dataType should download a raw list of participant 1`] = `
[
  "participantId",
  "createdAt",
  "updatedAt",
  "privateInfo",
  "publicInfo",
  "Sessions.sessionId",
]
`;

exports[`API Routes GET /study/:studyId/data/:dataType should download a raw list of responses 1`] = `
[
  "responseId",
  "createdAt",
  "updatedAt",
  "name",
  "payload",
  "sessionId",
  "Session.participantId",
]
`;

exports[`API Routes GET /study/:studyId/data/:dataType should download a raw list of sessions 1`] = `
[
  "sessionId",
  "createdAt",
  "updatedAt",
  "privateInfo",
  "publicInfo",
  "finished",
  "participantId",
  "studyId",
  "metadata",
]
`;

exports[`API Routes GET /study/:studyId/data/:dataType should download an extracted list of responses (in CSV format) 1`] = `"responseId,createdAt,updatedAt,name,sessionId,key_1,key_2"`;

exports[`API Routes GET /study/:studyId/data/:dataType should download an extracted list of responses 1`] = `
[
  "responseId",
  "createdAt",
  "updatedAt",
  "name",
  "sessionId",
  "key_1",
  "key_2",
]
`;

exports[`API Routes GET /study/:studyId/data/:dataType should fail when the study does not exist 1`] = `
{
  "error": "Unknown studyId",
}
`;

exports[`API Routes GET /study/:studyId/data/:dataType should handle studies without payload as well 1`] = `
[
  "responseId",
  "createdAt",
  "updatedAt",
  "name",
  "sessionId",
]
`;

exports[`API Routes GET /study/:studyId/data/:dataType should require authentication 1`] = `
{
  "error": "Authentication via API Key required",
}
`;

exports[`API Routes GET /study/:studyId/data/:dataType should require the correct API KEY 1`] = `
{
  "error": "The provided API Key is invalid.",
}
`;

exports[`API Routes POST /response should fail to submit a response when the session does not exist 1`] = `
{
  "error": "Unknown sessionId",
  "type": "AppError",
}
`;

exports[`API Routes POST /response should fail to submit a response when the sessionId is invalid 1`] = `
{
  "error": "sessionId must be a valid UUID",
  "type": "ValidationError",
}
`;

exports[`API Routes POST /response should fail to submit non-JSON payload 1`] = `
{
  "error": "payload must be a \`object\` type, but the final value was: \`"this-is-not-json"\`.",
  "type": "ValidationError",
}
`;

exports[`API Routes POST /session/finish should fail when the session does not exist 1`] = `
{
  "error": "Unknown sessionId",
  "type": "AppError",
}
`;

exports[`API Routes POST /session/finish should fail when the sessionId is invalid 1`] = `
{
  "error": "sessionId must be a valid UUID",
  "type": "ValidationError",
}
`;

exports[`API Routes POST /session/finish should mark a session as finished 1`] = `
{
  "success": true,
}
`;

exports[`API Routes PUT /participant/:participantId should fail when the participant does not exist 1`] = `
{
  "error": "Unknown participantId",
  "type": "AppError",
}
`;

exports[`API Routes PUT /participant/:participantId should fail when the participant is invalid 1`] = `
{
  "error": "participantId must be a valid UUID",
  "type": "ValidationError",
}
`;

exports[`API Routes PUT /participant/:participantId should update an existing participant 1`] = `
{
  "success": true,
}
`;

exports[`API Routes PUT /session/:sessionId should fail when the session does not exist 1`] = `
{
  "error": "Unknown sessionId",
  "type": "AppError",
}
`;

exports[`API Routes PUT /session/:sessionId should fail when the sessionId is invalid 1`] = `
{
  "error": "sessionId must be a valid UUID",
  "type": "ValidationError",
}
`;

exports[`API Routes PUT /session/:sessionId should update a session 1`] = `
{
  "success": true,
}
`;
